--- a/carousel.html
+++ b/carousel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="row no-gutters home-products" style="height:30%;">
@@ -13,11 +13,11 @@
 
 
 
-    <script src="/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/lib/tether/dist/js/tether.min.js"></script>
-    <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/template.js"></script>
-    <script src="/carousel.js"></script>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/tether/dist/js/tether.min.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="template.js"></script>
+    <script src="carousel.js"></script>
     <script>
         var $element = $(".home-products"),
             instance = $element.data('carousel') || $element.carousel({});
